--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie": "^0.5.0",
@@ -16,8 +17,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^3.0.1",
-    "redux-thunk": "^2.4.2"
+    "nodemon": "^3.0.1"
   },
   "name": "server",
   "version": "1.0.0",
